--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ body {
 
 .quote-text {
   font-weight: 700;
-  /* font-size: 200%; */
   font-size: clamp(1.5rem, 5vw, 3rem);
   letter-spacing: -0.02em;
   line-height: 130%;
@@ -58,7 +57,7 @@ body {
 
 .hide {
   opacity: 0;
-  transform: translateY(-10px); /* Текст чуть улетает вверх при исчезновении */
+  transform: translateY(-10px);
 }
 
 .btn {
